# TxMake

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.txt  TUTORIAL.md  txexample.toml
src/txdump/: clut.cpp  color.cpp  constants.cpp  fog.cpp  main.cpp  skybox.cpp  texture.cpp  utils.cpp
src/txdump/include/: clut.h  color.h  constants.h  fog.h  skybox.h  texture.h  utils.h
src/txgenerate/: clut.cpp  generate.cpp  main.cpp  quantize.cpp  tileset.cpp  utils.cpp
src/txgenerate/include/: clut.h  common.h  generate.h  groups.h  quantize.h  segment.h  tileset.h  utils.h
src/txmake/: clut.cpp  config.cpp  main.cpp  tileset.cpp  utils.cpp
src/txmake/include/: clut.h  config.h  groups.h  tileset.h  utils.h
